--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,9 +9,17 @@
     <link href="@Url.Content("/css/site.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css")" rel="stylesheet" type="text/css" />
+    <script src="@Url.Content("~/lib/jquery/dist/jquery.min.js")"></script>
+    <script src="@Url.Content("~/lib/bootstrap/dist/js/bootstrap.bundle.min.js")"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Styles", false)
 </head>
 <body>
+    <a id="btn-to-top">
+        <svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+            <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z" />
+        </svg>
+    </a>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white topnav">
             <div class="container">
@@ -282,35 +290,34 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+
+    <footer class="border-top footer text-muted " style="bottom: auto; position:absolute;">
         <div class="container pt-4 pb-4">
             <h6 style="color: white" class="mt-1">Công ty TNHH Thương mại Zerone</h6>
             <div class="row">
-                <div class="col-md-3 col-sm6">
+                <div class="col-md-3 col-sm6 sub">
                     <p>Thông tin</p>
                     @*<a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>*@
-                    <a class="nav-item" asp-area="" asp-controller="Home" asp-action="Index">Giới thiệu</a>
-                    <a class="nav-item" asp-area="" asp-controller="Home" asp-action="Index"> Tuyển dụng</a>
+                    <a class="nav-item" href="/about">Giới thiệu</a>
+                    <a class="nav-item" href="/work"> Tuyển dụng</a>
                 </div>
-                <div class="col-md-3 col-sm6">
+                <div class="col-md-3 col-sm6 sub">
                     <p>Chính sách</p>
                     @*<a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>*@
-                    <a class="nav-item" asp-area="" asp-controller="Home" asp-action="Index">
-                        Chính sách
-                        <a class="nav-item" asp-area="" asp-controller="Home" asp-action="Index">Chính sách đổ bảo hành</a>i trả
-                    </a>
-                    <a class="nav-item" asp-area="" asp-controller="Home" asp-action="Index">Chính sách vận chuyển</a>
-                    <a class="nav-item" asp-area="" asp-controller="Home" asp-action="Index">Chính sách bảo mật</a>
-                    <a class="nav-item" asp-area="" asp-controller="Home" asp-action="Index">Chính sách trả góp</a>
+                    <a class="nav-item" href="/policy/#baohanh">Chính sách bảo hành</a>
+                    <a class="nav-item" href="/policy/#doitra">Chính sách đổi trả</a>
+                    <a class="nav-item" href="/policy/#vanchuyen">Chính sách vận chuyển</a>
+                    <a class="nav-item" href="/policy/#baomat">Chính sách bảo mật</a>
+                    <a class="nav-item" href="/policy/#tragop">Chính sách trả góp</a>
                 </div>
-                <div class="col-md-3 col-sm6">
+                <div class="col-md-3 col-sm6 sub">
                     <p>Liên hệ</p>
                     @*<a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>*@
                     <a class="nav-item">Tư vấn mua hàng: <strong>1900.3030</strong></a>
                     <a class="nav-item">Giải quyết khiếu nại: <strong>1900.3033</strong></a>
                     <a class="nav-item">Dành cho đối tác: <strong>0366.485.663</strong></a>
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-6 sub">
                     <a class="nav-item"><img src="/img/index/bocongthuong.png" style="width: 60%; height: 60%" /></a>
                     <br />
                     <a class="nav-item"><img src="/img/index/paymethod.png" style="width: 60%; height: 60%" /></a>
@@ -330,9 +337,25 @@
             </div>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script>
+        $(document).ready(function () {
+            var btn = $('#btn-to-top');
+
+            $(window).scroll(function () {
+                if ($(window).scrollTop() > 300) {
+                    btn.addClass('show');
+                } else {
+                    btn.removeClass('show');
+                }
+            });
+
+            btn.on('click', function (e) {
+                e.preventDefault();
+                $('html, body').animate({ scrollTop: 0 }, '300');
+            });
+        });
+    </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+
 </html>
