--- a/Areas/Admin/Views/Products/Create.cshtml
+++ b/Areas/Admin/Views/Products/Create.cshtml
@@ -92,6 +92,46 @@
                         <span asp-validation-for="Note" class="text-danger"></span>
                     </div>
                     <div class="form-group">
+                        <label asp-for="View" class="control-label"></label>
+                        <input asp-for="View" class="form-control" />
+                        <span asp-validation-for="View" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AvailableVersion" class="control-label"></label>
+                        <input asp-for="AvailableVersion" class="form-control" />
+                        <span asp-validation-for="AvailableVersion" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AvailableColor" class="control-label"></label>
+                        <input asp-for="AvailableColor" class="form-control" />
+                        <span asp-validation-for="AvailableColor" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="UnitInStock" class="control-label"></label>
+                        <input asp-for="UnitInStock" class="form-control" />
+                        <span asp-validation-for="UnitInStock" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ProductAvailable" class="control-label"></label>
+                        <input asp-for="ProductAvailable" class="form-control" />
+                        <span asp-validation-for="ProductAvailable" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="UnitInOrder" class="control-label"></label>
+                        <input asp-for="UnitInOrder" class="form-control" />
+                        <span asp-validation-for="UnitInOrder" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ReorderLevel" class="control-label"></label>
+                        <input asp-for="ReorderLevel" class="form-control" />
+                        <span asp-validation-for="ReorderLevel" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="CurrentOrder" class="control-label"></label>
+                        <input asp-for="CurrentOrder" class="form-control" />
+                        <span asp-validation-for="CurrentOrder" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
                         <input type="submit" value="Create" class="btn btn-success" />
                         <a asp-action="Index" class="btn btn-outline-danger">Trở về</a>
                     </div>
