--- a/Views/Orders/Index.cshtml
+++ b/Views/Orders/Index.cshtml
@@ -126,6 +126,12 @@
                                                                 </tr>
                                                             </thead>
                                                             <tbody>
+                                                                @{
+                                                                    double moneyItem = 0;
+                                                                    double shipMoney = 0;
+                                                                    double pay = 0;
+                                                                    int shipId = 0;
+                                                                }
                                                                 @foreach (var item in Model) {
                                                                     <tr>
                                                                         <td>
@@ -146,6 +152,8 @@
                                                                         </td>
 
                                                                     </tr>
+                                                                    moneyItem += item.Total;
+                                                                    pay = moneyItem;
                                                                 }
 
 
@@ -156,7 +164,11 @@
                                                 </div>
                                             </div>
                                         </div>
-                                            <div class="actions clearfix"> Tổng tiền </div>
+
+                                        <div class="text-right text-primary card-title"> Tiền sản phẩm: @moneyItem </div>
+                                        <div class="text-right text-danger card-title"> Tổng tiền: @pay </div>
+
+
                                     </section>
                                     <h4>Vận chuyển</h4>
                                     <section>
@@ -165,23 +177,40 @@
 
                                             <div class="form-group">
                                                 <label class="control-label">Chọn công ty vận chuyển</label>
-                                                <select asp-for="@item.Order.Shipment.ShipperId" class="form-control" asp-items="ViewBag.ShipperId"></select>
+                                                <select id="ship" asp-for="@item.Order.Shipment.ShipperId" class="form-control" asp-items="ViewBag.ShipperId">
+                                                </select>
                                                 <span asp-validation-for="@item.Order.Shipment.ShipperId" class="text-danger"></span>
                                             </div>
-                                              @*<div class="form-group">
+                                            @*<div class="form-group">
                                                 <label class="control-label">Chọn mã khuyến mãi của bạn</label>
                                                 <select asp-for="@item.Order.Customer.Voucher_Details" class="form-control" asp-items="ViewBag.VoucherId"></select>
                                                 <span asp-validation-for="@item.Order.Customer.Voucher_Details" class="text-danger"></span>
-                                            </div>  *@
+                                                </div>  *@
 
                                             <div class="form-group">
                                                 <label class="control-label">Chọn phương thức thanh toán</label>
                                                 <select asp-for="@item.Order.Payment.PaymentId" class="form-control" asp-items="ViewBag.PaymentId"></select>
                                                 <span asp-validation-for="@item.Order.Payment.PaymentId" class="text-danger"></span>
                                             </div>
-                                            break;      
+
+
+
+
+                                            break;
                                         }
-                                        <div class="actions clearfix"> Tổng tiền</div>
+                                        <script>
+
+                                            $('#ship').change(function () {
+
+                                               var selectedValue = $(this).val();
+                                               @shipId = selectedValue;  
+                                            });
+
+                                        </script>
+                                        
+
+                                        <div class="text-right text-primary card-title"> Tiền sản phẩm: @moneyItem </div>
+                                        <div class="text-right text-danger card-title"> Tổng tiền: @pay </div>
                                     </section>
                                     <h4>Email Setup</h4>
                                     <section>
