--- a/Areas/Admin/Views/SaleManagers/Shipping.cshtml
+++ b/Areas/Admin/Views/SaleManagers/Shipping.cshtml
@@ -14,7 +14,7 @@
     <!-- Custom Stylesheet -->
     <link href="~/css/style.css" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-
+     <link href="@Url.Content("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css")" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
@@ -38,9 +38,18 @@
         <div class="row">
             <div class="col-12">
                 <div class="card">
+                    
                     <div class="card-header">
-                        <h4 class="card-title"> Hóa đơn sản phẩm</h4>
+                       
+                         <div>
+                             <h4 class="card-title"> Hóa đơn sản phẩm</h4>
+                            <div class="mt-4">
+                                <a asp-action="XuatFile" class="btn btn-primary" style ="background-color:green; color: white; border: none; border-radius: 20px  "><i class="bi bi-download"></i>&nbsp;&nbsp;&nbsp;Xuất CSV</a>
+                            </div>
+                        </div>
+
                         <div class="float-right">
+                           
                             <form class="form-inline">
                                 <div class="form-group">
                                     <label>Tinh trang: </label>
